unpackaged/main/default/objects/Asset_Member__c/Asset_Member__c.object-meta.xml
<CustomObject>
    <label>Asset Member</label>
    <nameField>
        <displayFormat>AM-{000000}</displayFormat>
        <label>Asset Members Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>