unpackaged/main/default/objects/Asset_Member__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3 AND (4 OR 5)</booleanFilter>
        <filterItems>
            <field>$Source.SubCustomer__c</field>
            <operation>equals</operation>
            <valueField>Asset.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Asset.Used_on_WorkOrder__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Asset.Quantity</field>
            <operation>greaterOrEqual</operation>
            <value>1</value>
        </filterItems>
        <filterItems>
            <field>Asset.Status</field>
            <operation>notEqual</operation>
            <value>RMA</value>
        </filterItems>
        <filterItems>
            <field>Asset.Status</field>
            <operation>notEqual</operation>
            <value>RMA - Left On-Site</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Asset Members</relationshipLabel>
    <relationshipName>Asset_Members</relationshipName>
    <type>Lookup</type>
</CustomField>