unpackaged/main/default/objects/Asset_Member__c/fields/SubCustomer__c.field-meta.xml
<CustomField>
    <fullName>SubCustomer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SubCustomer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Asset Members</relationshipLabel>
    <relationshipName>Asset_Members</relationshipName>
    <type>Lookup</type>
</CustomField>