unpackaged/main/default/objects/Asset_Member__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Asset Members</relationshipLabel>
    <relationshipName>Asset_Members</relationshipName>
    <type>Lookup</type>
</CustomField>