unpackaged/main/default/objects/Asset_Member__c/validationRules/Subcustomer_Validation_AM.validationRule-meta.xml
<ValidationRule>
    <fullName>Subcustomer_Validation_AM</fullName>
    <active>false</active>
    <errorConditionFormula>SubCustomer__c =Work_Order__r.Sub_Customer__c</errorConditionFormula>
    <errorDisplayField>SubCustomer__c</errorDisplayField>
    <errorMessage>You Must use the SubCustomer from the associated work order</errorMessage>
</ValidationRule>